--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "formik": "^2.2.9",
+    "formik-semantic-ui-react": "^2.0.0",
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
     "react-data-table-component": "^7.5.0",
