--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.0.0",
     "react-data-table-component": "^7.5.0",
     "react-dom": "^18.0.0",
+    "react-js-pagination": "^3.0.3",
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
